# vehicle-can-dashboard

./: .gitignore  README.md  SETUP.md  app.yml  components.json  databricks.yml  package.json  pyproject.toml  test_databricks_connect.py  tsconfig.json  vite.config.ts
.cursor/: mcp.json
.cursor/rules/: project.mdc
notebooks/: 00_setup.py  01_data_generator.py  02_generate_dbc.py  03_download_videos.py  04_vehicle_dlt_pipeline.sql  04_vehicle_dlt_udf.py  05_grant_app_permissions.py
src/yao_demo_vehicle_app/: _metadata.pyi
src/yao_demo_vehicle_app/backend/: app.py  config.py  dependencies.py  logger.py  models.py  router.py  runtime.py  utils.py
src/yao_demo_vehicle_app/ui/: index.html  main.tsx
src/yao_demo_vehicle_app/ui/components/apx/: dev-tools.tsx  logo.tsx  mode-toggle.tsx  navbar.tsx
src/yao_demo_vehicle_app/ui/components/backgrounds/: bubble.tsx
src/yao_demo_vehicle_app/ui/components/dashboard/: event-timeline.tsx  index.tsx  quality-view.tsx  signal-chart.tsx  stats-cards.tsx  video-player.tsx
src/yao_demo_vehicle_app/ui/lib/: api.ts  selector.ts
src/yao_demo_vehicle_app/ui/routes/: __root.tsx  index.tsx
src/yao_demo_vehicle_app/ui/types/: routeTree.gen.ts  vite-env.d.ts
